add JspMealController, roles test